src/App.css
.App {
  text-align: center;
  min-height: 100vh;
  background-color: #08aeea;
  background-image: linear-gradient(0deg, #08aeea 0%, #6ccc88 100%);
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

.header h1 {
  margin: -20px;
  padding: 21px 0;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.WaitingRoom {
  text-align: center;
  min-height: 100vh;
  background-color: #08aeea;
  background-image: linear-gradient(0deg, #08aeea 0%, #6ccc88 100%);
}

.App-link {
  color: #61dafb;
}

.Mobile {
  min-height: 100vh;
  min-width: 100vw;
  overflow-x: hidden;
  overflow-y: hidden;
  background-color: #08aeea;
  background-image: linear-gradient(0deg, #08aeea 0%, #6ccc88 100%);
}

.DrawingScreen {
  min-height: 100vh;
  min-width: 100vw;
  overflow-x: hidden;
  overflow-y: hidden;
  position: relative;
  background-color: #08aeea;
  background-image: linear-gradient(0deg, #08aeea 0%, #6ccc88 100%);
}

.Stopmoving {
  overflow: hidden;
  touch-action: none;
}

.Footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 60px;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.countdown-timer {
  position: absolute;
  width: 52px;
  height: 52px;
}

.countdown-timer__circle circle {
  stroke-dasharray: 151px;
  stroke-dashoffset: 151px;
  stroke-linecap: butt;
  stroke-width: 4px;
  stroke: #fd4f57;
  fill: none;
}

.countdown-timer__circle svg {
  width: 52px;
  height: 52px;
  transform: rotateZ(-90deg);
}

.countdown-timer__text {
  position: absolute;
  top: 17px;
  width: 52px;

  font-size: 50px;
  font-weight: 600;
  text-align: center;
}

@keyframes countdown-animation {
  from {
    stroke-dashoffset: 0px;
  }
  to {
    stroke-dashoffset: 151px;
  }
}

